--- a/front-end/form.html
+++ b/front-end/form.html
@@ -29,15 +29,19 @@
                 <input type="text" id="loc" name="loc" size=50>
             </p>
             <p>
-                <label for="day">what day is it? i might have to walk my frickin' doog</label>
-                <input type="date" id="day" name="day">
+                <label for="day-start">what day is it? i might have to walk my frickin' doog</label>
+                <input type="date" id="day-start" name="day-start">
             </p>
             <p>
                 <label for="start">and when does this shindig start?</label>
                 <input type="time" id="start" name="start">
             </p>
             <p>
-                <label for="end">and it ends...when?</label>
+                <label for="day-end">what day does it end? i might have to feed my dang tortle</label>
+                <input type="date" id="day-end" name="day-end">
+            </p>
+            <p>
+                <label for="end">exactly what time does it end though?</label>
                 <input type="time" id="end" name="end">
             </p>
             <p>
